<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.EditProfile">

    <RelativeLayout
        android:id="@+id/snippet_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_backward"
            android:layout_margin="10dp"
            android:backgroundTint="@color/white"/>

        <TextView
            android:id="@+id/viewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_profile_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <ImageButton
            android:id="@+id/saveBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_upload"
            android:backgroundTint="@color/white" />

    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/snippet_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/abs_2"
        android:padding="2dp"
        android:background="@drawable/border_2"/>

    <TextView
        android:id="@+id/changePicBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        android:text="@string/change_profile_picture_title"
        />

    <RelativeLayout
        android:id="@+id/usernameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/changePicBtn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">


        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/username_title" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/nameTV"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:maxLength="40"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/passwordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">


        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/password_title" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/passwordTitle"
            android:hint="@string/password_title"
            android:inputType="textVisiblePassword"
            android:maxLength="40"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ConfirmpasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLayout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:visibility="gone">


        <TextView
            android:id="@+id/ConfirmpasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/password_title"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/Confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/ConfirmpasswordTitle"
            android:hint="@string/retype_password_title"
            android:inputType="textVisiblePassword"
            android:maxLength="40"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ConfirmpasswordLayout"
        android:layout_alignStart="@+id/usernameLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp">


        <TextView
            android:id="@+id/contactTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/contact_edittext_title" />


        <EditText
            android:id="@+id/contactNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/contactTV"
            android:hint="@string/contactNum_hint"
            android:inputType="phone"
            android:maxLength="12"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/emailLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contactLayout"
        android:layout_alignStart="@id/usernameLayout"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/email_edittext_title" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@id/emailTV"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addrLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLayout"
        android:layout_alignStart="@id/usernameLayout"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/addresstv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/address_edittext_title" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@id/addresstv"
            android:hint="@string/address_hint"
            android:inputType="textMultiLine"
            android:maxLength="40"
            android:textSize="14sp" />

    </RelativeLayout>

</RelativeLayout>