<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainPage.SleepFragment"
    >

    <RelativeLayout
        android:id="@+id/relayout_sleepfragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sleeptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/sleep"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sleep_desc"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/sleeptxt"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/soundscapetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/soundscape"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_soundscape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/soundscapetxt"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/asmrtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_soundscape"
            android:layout_marginStart="10dp"
            android:text="@string/asmr"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_asmr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/asmrtxt"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/sleepbettertxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_asmr"
            android:layout_marginStart="10dp"
            android:text="@string/sleepbetter"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sleep_better"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sleepbettertxt"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/anxioustxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_sleep_better"
            android:layout_marginStart="10dp"
            android:text="@string/anxious"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_anxious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/anxioustxt"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/depressedtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_anxious"
            android:layout_marginStart="10dp"
            android:text="@string/depressed"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_depressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/depressedtxt"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/downtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_depressed"
            android:layout_marginStart="10dp"
            android:text="@string/feelingdown"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_feeling_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/downtxt"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/coachingtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_feeling_down"
            android:layout_marginStart="10dp"
            android:text="@string/coaching"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_coaching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coachingtxt"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginBottom="50dp"
            >

        </androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>



</androidx.core.widget.NestedScrollView>