<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Discover.AddPost">

    <RelativeLayout
        android:id="@+id/snippet_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        >

        <ImageButton
            android:id="@+id/back"
            android:background="@drawable/ic_backward"
            android:backgroundTint="@color/white"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/viewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_post_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/snippet_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <EditText
            android:id="@+id/editText"
            android:layout_below="@+id/imgUploaderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/write_something_hint"
            android:inputType="textMultiLine" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle_border"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imgUploaderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img"
            android:layout_centerHorizontal="true"
            android:text="@string/upload_image_title"
            android:background="@drawable/rounded_edge_grey"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:backgroundTint="@color/teal_700"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/publishBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edge_grey"
            android:text="@string/publish_title"
            android:textColor="@color/black"
             />

    </RelativeLayout>

</RelativeLayout>